@@ -89,7 +89,7 @@ ISpyCaloCluster::analyze (const edm::Event& event, const edm::EventSetup& eventS
     IgProperty BACK_3  = fractions.addProperty("back_3",  IgV3d());
     IgProperty BACK_4  = fractions.addProperty("back_4",  IgV3d());
 
-    IgAssociationSet& caloClustersFracs = storage->getAssociationSet("CaloClusterRecHitFractions_V1");
+    IgAssociations& caloClustersFracs = storage->getAssociations("CaloClusterRecHitFractions_V1");
 
     for ( reco::BasicClusterCollection::const_iterator ci = collection->begin(), cie = collection->end(); ci != cie; ++ci ) 
     {
